# ai-rename-movies

./: .pre-commit-config.yaml  AGENTS.md  Makefile  pyproject.toml  rename-movies
src/rename_movies/: __init__.py
tests/: test_unique_target.py
