[project]
name = "rename-movies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "anekos", email = "anekos@snca.net" }
]
requires-python = ">=3.11"
dependencies = [
    "openai>=1.51.0",
]

[project.scripts]
rename-movies = "rename_movies:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "click>=8.3.0",
    "mypy>=1.18.2",
    "pytest>=9.0.0",
    "ruff>=0.14.4",
]

[tool.ruff.lint]
select = ["I", "E4", "E7", "E9", "F", "W", "UP"]
ignore = ["E741"]  # https://docs.astral.sh/ruff/rules/ambiguous-variable-name/
fixable = ["ALL"]
unfixable = []

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
show_error_codes = true
check_untyped_defs = true
namespace_packages = true
disallow_untyped_defs = true

# [[tool.mypy.overrides]]
# module = "fitz"
# ignore_missing_imports = true
